[gd_scene load_steps=5 format=3 uid="uid://hwsl16lji7g8"]

[ext_resource type="Script" path="res://scenes/main_scene.gd" id="1_m7ixl"]

[sub_resource type="Animation" id="Animation_257vy"]
resource_name = "animate_combo_display"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8s8fh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hyl17"]
_data = {
"RESET": SubResource("Animation_8s8fh"),
"animate_combo_display": SubResource("Animation_257vy")
}

[node name="MainScene" type="Node2D"]
script = ExtResource("1_m7ixl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 2140.0
offset_bottom = 1250.0
color = Color(0.147094, 0.044442, 0.00514834, 1)

[node name="Hand" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(193, 884)

[node name="Deck" type="Node2D" parent="."]
position = Vector2(1640, 860)

[node name="PlayArea" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(756, 178)

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_top = 555.0
offset_right = 2003.0
offset_bottom = 1197.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 350

[node name="PlayLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "Play cards"
horizontal_alignment = 1

[node name="DiscardLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "Discard"
horizontal_alignment = 1

[node name="ComboDisplay" type="CenterContainer" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 1996.0
offset_bottom = 552.0

[node name="HBoxContainer" type="HBoxContainer" parent="ComboDisplay"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="PointsLabel" type="Label" parent="ComboDisplay/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "1"

[node name="xLabel" type="Label" parent="ComboDisplay/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "x"

[node name="MultiplierLabel" type="Label" parent="ComboDisplay/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "1"

[node name="ComboDisplayAnimationPlayer" type="AnimationPlayer" parent="ComboDisplay"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_hyl17")
}
